refact + new command for main tags

--- a/src/BddBundle/Resources/views/Review/form.html.twig
+++ b/src/BddBundle/Resources/views/Review/form.html.twig
@@ -43,12 +43,12 @@
             </div>
 
             <div class="form-group">
-                {{ form_label(form.positiveKeywords, "", {'label_attr': {'class': 'control-label'}}) }}
-                {{ form_widget(form.positiveKeywords) }}
+                {{ form_label(form.pros, "", {'label_attr': {'class': 'control-label'}}) }}
+                {{ form_widget(form.pros) }}
             </div>
             <div class="form-group">
-                {{ form_label(form.negativeKeywords, "", {'label_attr': {'class': 'control-label'}}) }}
-                {{ form_widget(form.negativeKeywords) }}
+                {{ form_label(form.cons, "", {'label_attr': {'class': 'control-label'}}) }}
+                {{ form_widget(form.cons) }}
             </div>
 
             <div class="form-group">
