--- a/src/BddBundle/Resources/views/Liste/list.html.twig
+++ b/src/BddBundle/Resources/views/Liste/list.html.twig
@@ -11,7 +11,7 @@
                     <div class="caption">
                         <div class="content-group-sm media">
                             <div class="media-left">
-                                {% if review.user.profilePicture %}
+                                {% if liste.user.profilePicture %}
                                     <img src="{{ liste.user.profilePicture }}"
                                          class="img-circle img-xs"
                                          alt="{{ liste.user.displayName }}">
